# webapi.event+/Controllers/EventoController.cs
@@ -44,6 +44,20 @@ namespace webapi.event_.Controllers
             }
         }
 
+
+        [HttpGet("ListarAnteriores")]
+        public IActionResult GetPreviousEvents()
+        {
+            try
+            {
+                return Ok(_eventoRepository.ListarAnteriores());
+            }
+            catch (Exception e)
+            {
+                return BadRequest(e.Message);
+            }
+        }
+
         [HttpGet("{id}")]
         public IActionResult GetById(Guid id)
         {
